--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,39 @@
+h1 {
+  text-align: center;
+  font-size: 2em;
+  margin: 0;
+  position: absolute;
+}
+
+h2 {
+  text-align: center;
+}
+
+.container {
+  background-color: #e8e8e8;
+  background-image: url('./cats_bgd3.jpg');
+  background-blend-mode: lighten;
+  background-size: cover;
+  width: 100%;
+  height: 200px;
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+  border: solid 1px black;
+}
+
 .cat-info img {
   max-width: 700px;
   max-height: 700px;
   width: auto;
   height: auto;
+  border: solid 1px black;
+}
+
+.selector-div {
+  min-width: 250px;
 }
 
 .breed-select {
@@ -10,10 +41,25 @@
   margin: 0 auto;
 }
 
-.cat-info {
+.cat-card {
+  background-image: url('./cats_bgd3.jpg');
+  background-blend-mode: lighten;
+  background-size: contain;
+  background-color: #e8e8e8;
+  border: solid 1px black;
+  width: 100%;
+  height: 100%;
+  margin-top: 25px;
   display: flex;
-  margin: 0 auto;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.text-description {
+  max-width: 60%;
   text-align: center;
+  word-wrap: break-word;
 }
 
 .loader {
@@ -37,9 +83,5 @@
 }
 
 .loader.hidden {
-  display: none;
-}
-
-.error.hidden {
   display: none;
 }
