--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 h1 {
   text-align: center;
   font-size: 2em;
@@ -13,7 +17,7 @@ h2 {
   background-color: #e8e8e8;
   background-image: url('./cats_bgd3.jpg');
   background-blend-mode: lighten;
-  background-size: cover;
+  background-size: auto;
   width: 100%;
   height: 200px;
   margin-top: 25px;
@@ -24,16 +28,16 @@ h2 {
   border: solid 1px black;
 }
 
-.cat-info img {
+.selector-div {
+  min-width: 250px;
+}
+
+.cat-image {
   max-width: 700px;
   max-height: 700px;
   width: auto;
   height: auto;
   border: solid 1px black;
-}
-
-.selector-div {
-  min-width: 250px;
 }
 
 .breed-select {
@@ -62,11 +66,17 @@ h2 {
   word-wrap: break-word;
 }
 
+.text-temperament {
+  max-width: 60%;
+  text-align: center;
+  word-wrap: break-word;
+}
+
 .loader {
   width: 48px;
   height: 48px;
   border: 5px solid #fff;
-  border-bottom-color: #ff3d00;
+  border-bottom-color: darkslategrey;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
