--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,8 @@ h2 {
   background-color: #e8e8e8;
   background-image: url('./cats_bgd3.jpg');
   background-blend-mode: lighten;
-  background-size: auto;
+  background-size: 1000px;
+  background-repeat: repeat-x;
   width: 100%;
   height: 200px;
   margin-top: 25px;
@@ -48,7 +49,9 @@ h2 {
 .cat-card {
   background-image: url('./cats_bgd3.jpg');
   background-blend-mode: lighten;
-  background-size: contain;
+  background-size: 1000px;
+  background-repeat: repeat;
+
   background-color: #e8e8e8;
   border: solid 1px black;
   width: 100%;
